DMP-2166 Update processAudioForDownload to trim start and end of sessions (if applicable)